# main.py
@@ -9,6 +9,9 @@ from src.logics.prototype_manager import prototype_manager
 from src.dto.filter import filter
 from src.processes.process_manager import process_manager
 from src.processes.turnover_process import turnover_process
+from src.processes.dateblock_process import dateblock_process
+import os
+import json
 
 app = connexion.FlaskApp(__name__, specification_dir='./')
 
@@ -24,6 +27,10 @@ manager.open("settings2.json", "../")
 reposity = storage_reposity()
 start = start_service(reposity, manager)
 start.create()
+
+processes = process_manager()
+processes.register('turnover', turnover_process)
+processes.register('dateblock', dateblock_process)
 
 @app.route("/api/reports/formats", methods=["GET"])
 def formats():
@@ -78,17 +85,36 @@ def turnover():
     if not data:
         return jsonify({"error": "No transactions found"}), 404
 
-    processes = process_manager()
-    processes.register('turnover', turnover_process)
     turnover = processes.get('turnover')
     turnover_data = turnover.process(data)
 
     if not turnover_data:
-        return jsonify({"message": "No turnovers found"}), 404
+        return jsonify({"error": "No turnovers found"}), 404
 
     report = report_factory().create(manager)
     report.create(turnover_data)
     return report.result
+
+@app.route("/api/dateblock", methods=["POST"])
+def dateblock():
+    data = start.data["transactions"]
+
+    if not data:
+        return jsonify({"error": "No transactions found"}), 404
+
+    dateblock = processes.get('dateblock')
+
+    return dateblock.process(data)
+
+@app.route("/api/get_dateblock", methods=["GET"])
+def get_dateblock():
+    file_path = os.path.join(os.path.abspath(os.path.join(os.path.dirname(__file__), "../data/turnovers")), "blocked_turnovers.json")
+    try:
+        with open(file_path, 'r', encoding='utf-8') as file:
+            data = json.load(file)["date"]
+    except:
+        return jsonify({"error": "Dateblock file not found"}), 404
+    return jsonify({"messege": data}), 200
 
 if __name__ == '__main__':
     app.add_api("swagger.yaml")
